# map-game

./: .gitignore  README.md  notes.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
mapgame/: TO DO.md  horizontal_layout.css  mapgame.py
mapgame/mapgame_pieces/: alive.py  conversations.py  gui.py  horizontal_layout.css  items.py  map.py  mapgui.css  player.py  utils.py
src/: items.py  mapgame.py  terminal_tools.py
